variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:6: error: value caseOrange is not a member of Boolean
  else {(estSurOrange()) caseOrange = caseOrange + 1}
                         ^